# huaweicloud-skills

./: README-CN.md  README.md
skills/ai/ges/huawei-cloud-ges-graph/: SKILL.md
skills/ai/maas/huawei-cloud-maas-tokens-usage/: SKILL.md
skills/ai/modelarts/huawei-cloud-ascend-command/: SKILL.md
skills/ai/modelarts/huawei-cloud-ascend-models-deploy/: SKILL.md
skills/ai/modelarts/huawei-cloud-ascend-small-model-migrate/: SKILL.md
skills/ai/modelarts/huawei-cloud-modelarts-training-diagnosis/: SKILL.md
skills/bigdata/dws/huawei-cloud-dws-cpu-diag/: SKILL.md
skills/bigdata/dws/huawei-cloud-dws-dymem-diag/: SKILL.md
skills/bigdata/mrs/huawei-cloud-mrs-hive-sql-check/: SKILL.md
skills/bss/billing/huawei-cloud-business-support-query/: SKILL.md
skills/bss/billing/huawei-cloud-business-tf-support/: SKILL.md
skills/cdi/assist/huawei-cloud-icp-process-guidance/: SKILL.md  index.json
skills/cdi/assist/huawei-cloud-icp-rule-consult/: SKILL.md
skills/computing/flexus-l/huawei-cloud-flexus-l-deploy-jiuwenswarm/: SKILL.md
skills/computing/flexus-l/huawei-cloud-flexus-l-server-flexusagent-deployment/: SKILL.md
skills/computing/flexus-l/huawei-cloud-flexus-l-server-flexusagent-deployment/scripts/: app_workflow_import.py  caller.py  deploy.py  lib.py  maas.py  passwd.py  pyproject.toml  sg_rule.py  uniagent.py  utils.py
skills/computing/flexus-l/huawei-cloud-flexus-l-server-hermes-deployment/: SKILL.md
skills/computing/flexus-l/huawei-cloud-flexus-l-server-hermes-deployment/scripts/: caller.py  channels.py  deploy.py  gateway.py  lib.py  models.py  pyproject.toml
skills/computing/flexus-l/huawei-cloud-flexus-l-server-manage/: SKILL.md
skills/computing/flexus-l/huawei-cloud-flexus-l-server-openclaw-deployment/: SKILL.md
skills/computing/flexus-l/huawei-cloud-flexus-l-server-ops/: SKILL.md
skills/computing/flexus-l/huawei-cloud-flexus-l-server-scripts-excute/: SKILL.md
skills/computing/flexus-x/huawei-cloud-ecs-sqlbot-deploy/: SKILL.md
skills/computing/flexus-x/huawei-cloud-ecs-sqlbot-deploy/scripts/: coc_deploy.py  config.py  deploy_sqlbot.py  huawei_cloud_ecs.py  pyproject.toml  query_regions.py  utils.py
skills/computing/functiongraph/huawei-cloud-functiongraph-function-create/: SKILL.md
skills/computing/functiongraph/huawei-cloud-functiongraph-trigger-create/: SKILL.md
skills/computing/ops/huawei-cloud-computing-query/: SKILL.md  requirements.txt
skills/container/cce/huawei-cloud-cce-metric-analyzer/: SKILL.md
skills/devtools/cli/huawei-cloud-cli-guidance/: SKILL.md
skills/devtools/cli/huawei-cloud-codearts-code-gen/: SKILL.md
skills/devtools/huawei-cloud-billing-scout/: SKILL.md
skills/devtools/huawei-cloud-business-support-query/: SKILL.md  requirements.txt
skills/monitoring/ecs/huawei-cloud-ecs-alert/: SKILL.md
(+1827 files in other folders)
