[project]
name = "huawei-cloud-flexus-l-server-flexusagent-deployment"
version = "1.0.0"
authors = [
    {name = "OpenClaw Skill Developer"}
]
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.8.1"
keywords = ["huawei", "flexusagent", "deployment", "cloud", "ai-agent"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]

dependencies = [
    # SDK
    "huaweicloudsdkcore>=3.1.0,<4.0.0",
    "huaweicloudsdkcoc>=3.1.0,<4.0.0",
    "huaweicloudsdkvpc>=3.1.0,<4.0.0",
    "requests>=2.31.0,<3.0.0",
    
    # YAML
    "pyyaml>=6.0,<7.0",
    
    # SSL
    "certifi>=2024.0",
    
    # HTTP
    "urllib3>=2.0,<3.0",
]

[project.optional-dependencies]
# dev = [
#     "pytest>=7.0.0",
#     "black>=23.0.0",
#     "flake8>=6.0.0",
#     "mypy>=1.0.0",
# ]

[project.urls]
Homepage = "https://github.com/huaweicloud/huaweicloud-skills/tree/master/skills/computing/flexus-l//huawei-cloud-flexus-l-server-flexusagent-deployment"

[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
packages = ["scripts"]

[tool.setuptools.package-dir]
"" = "."

[project.scripts]
flexusagent-deploy = "scripts.caller:main"
