[project]
name = "huawei-cloud-flexus-l-server-hermes-deployment"
version = "1.0.0"
dependencies = [
    "huaweicloudsdkcore>=3.1.0",
    "huaweicloudsdkcoc>=3.1.0",
    "pyyaml>=6.0",
]

[tool.setuptools]
py_modules = [
    "caller",
    "lib",
    "utils",
    "deploy",
    "models",
    "channels",
    "gateway"
]

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"